<resources>
    <string name="app_name">Mobile Menu</string>

    <string name="slogan">Welcome to The Burrito!</string>
    <string name="altSlogan">Made with fresh ingredients, you\'ll love every bite.</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="passwordHint">Password</string>
    <string name="phoneHint">Phone - Digits Only</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>

    <string name="orderNumber">#111111</string>
    <string name="orderStatus">Status</string>

    <string name="cartTotal">Total:</string>

    <string name="phoneDigits">1234567890</string>
    <string name="address">Address</string>
    <string name="name">John Smith</string>
    <string name="email">johnsmith@email.com</string>

    <string name="menu">Name of Menu</string>
    <string name="food">Name of Food</string>
    <string name="price">100,000</string>
    <string name="description">Description</string>
    <string name="extras">Extras</string>
    <string name="title_activity_test_this">testThis</string>
    <string name="title_activity_test_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_user_settings">UserSettings</string>
    <string name="navMenu">Menu</string>
    <string name="navCart">Cart</string>
    <string name="navOrders">Orders</string>
    <string name="navExit">Sign Out</string>
    <string name="navSettings">Settings</string>
    <string name="orderHeader">Your Order</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="placeOrder">Place Order</string>
    <string name="UserSettings">User Settings</string>


</resources>
