<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserSettings"
    tools:showIn="@layout/app_bar_user_settings">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_menu"
        android:scrollbars="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_name"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp" />
        <TextView
            android:id="@+id/text_phone"
            android:text="@string/phoneDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp" />
        <TextView
            android:id="@+id/text_email"
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
