<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.flyingburritoco.mobilemenu.Cart">

        <RelativeLayout
            android:id="@+id/testCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

                <TextView
                    android:id="@+id/orderHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orderHeader"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="#000000"
                    android:layout_below="@+id/orderHeader"/>

        </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/testCard"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_above="@+id/totalContainer"
        />

    <android.support.v7.widget.CardView
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/totalContainer">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="#000000"/>

            <LinearLayout
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/cartTotal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/total"
                    android:text="@string/price"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true">

                <Button
                    android:id="@+id/btnPlaceOrder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/placeOrder"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/btnCancelOrder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancelOrder"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
